Fixed header layout on mobile version

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -739,7 +739,15 @@
         margin: 0 5px;
     }
     .header-title{
-        font-size: 22px;
+        font-size: 20px;
+    }
+    .login-span{
+        margin-right: 0;
+        font-size: 13px;
+    }
+    .menu-button{
+        margin: 0;
+        padding: 2px 5px;
     }
     .copyright{
         font-size: 16px;
